# ubw

./: .gitignore  Cargo.toml  README.md  bw.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build.yml
config/: bw.toml
container/: .env  README.md  docker-compose.yml
samples/: auth.json  ciphers.json  profile.json  sync.json
scripts/: ciphers.sh  config.sh  install.sh  login.sh  profile.sh  sync.sh
src/: api.rs  args.rs  auth_cache.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  session.rs
ubitwarden/: Cargo.toml
ubitwarden-agent/: Cargo.toml
ubitwarden-agent/src/: agent.rs  agent_safe.rs  channel.rs  encrypted_channel.rs  lib.rs  messages.rs
ubitwarden-api/: Cargo.toml
ubitwarden-api/src/: api.rs  api_types.rs  credentials.rs  crypto.rs  error.rs  session.rs
ubitwarden/src/: api.rs  api_types.rs  crypto.rs  error.rs  lib.rs  session.rs
ubitwarden/src/cache/: common.rs  server.rs
ubw/: Cargo.toml
ubw-moz/: Cargo.toml
ubw-moz/src/: data.rs  lib.rs  main.rs  moz.rs  proxy.rs
ubw-moz/src/biometric/: macos.rs  mod.rs  noop.rs  passthru.rs  totem.rs
ubw-wayland/: Cargo.toml
ubw-wayland/src/: main.rs
ubw/src/: banner.rs  common.rs  common_const.rs  lib.rs  login.rs  main.rs
ubw/src/commands/: auth.rs  ciphers.rs  firefox_relay.rs  login.rs  mod.rs  password.rs  server.rs  ssh.rs  totp.rs  xsecurelock.rs
ubw/src/commands/agent/: credentials.rs  mod.rs  server.rs  ssh.rs  utils.rs
ubw/src/commands/agent/storage/: macos.rs  macos_enclave.rs  memory.rs  mod.rs
ubw/src/commands/cache/: server.rs  utils.rs
ubw/src/commands/server/: cache.rs  utils.rs
ubw/src/commands/xss/: linux.rs  mod.rs  noop.rs  x11.rs
