[workspace]
resolver = "2"
members = ["ubitwarden", "ubitwarden-agent", "ubw"]

[workspace.package]
version = "0.0.39"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.22"
bitwarden-crypto = "2.0"
bitwarden-encoding = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
daemonize = "0.5"
derive_more = { version = "2.1", features = ["display"] }
dialoguer = "0.12"
dirs = "6.0"
ed25519-dalek = "2.2"
figlet-rs = "0.1"
libc = "0.2"
log = "0.4"
nix = { version = "0.30", features = ["user"] }
num_enum = "0.7"
reqwest = { version = "0.13", default-features = false, features = [
  "form",
  "json",
  "rustls"
] }
rstaples = "0.3"
rust-embed = "8.9"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
signature = "2.2"
ssh-agent-lib = "0.5"
tabled = "0.20"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
totp-rs = { version = "5.7", features = ["otpauth"] }
whoami = "2"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr"] }

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
# Correctness lints
clone_on_ref_ptr = "warn"  # Avoid unnecessary clones of Arc/Rc
# Code quality lints
dbg_macro = "warn"  # Catch debug macros before commit
exit = "warn"  # Prefer proper error handling over process::exit
expect_used = "warn"
filetype_is_file = "warn"  # Catch misuse of is_file()
indexing_slicing = "warn"  # Prevent potential panics from indexing
# Performance lints
inefficient_to_string = "warn"  # Use more efficient string conversion
large_enum_variant = "warn"  # Optimize enum memory layout
lossy_float_literal = "warn"  # Catch precision loss in float literals
manual_ok_or = "warn"  # Use ok_or_else for lazy evaluation
mem_forget = "warn"  # Catch potential memory leaks
missing_errors_doc = "allow"
needless_pass_by_ref_mut = "warn"
or_fun_call = "warn"  # Use unwrap_or_else instead of unwrap_or
# Security-related lints
panic = "warn"  # Avoid panics in production code
pedantic = { level = "warn", priority = -1 }
todo = "warn"  # Catch unfinished code before release
unimplemented = "warn"  # Catch placeholder implementations
unwrap_used = "warn"
use_debug = "warn"  # Catch Debug formatting in production

[profile.release]
opt-level = "s"
lto = true
