[package]
name = "ubitwarden-agent"
version.workspace = true
edition.workspace = true

[dependencies]
dirs.workspace = true
log.workspace = true
orion.workspace = true
rstaples.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ubitwarden = { path = "../ubitwarden-api" }
whoami.workspace = true

[lints]
workspace = true
