[package]
name = "ubitwarden"
version.workspace = true
edition.workspace = true

[dependencies]
bitwarden-crypto.workspace = true
bitwarden-encoding.workspace = true
derive_more.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
tokio.workspace = true
totp-rs.workspace = true

[lints]
workspace = true
