[package]
name = "ubw-moz"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ubwmoz"
path = "src/main.rs"

[dependencies]
aes.workspace = true
anyhow.workspace = true
base64.workspace = true
cbc.workspace = true
clap.workspace = true
dirs.workspace = true
hmac.workspace = true
log.workspace = true
pidlock.workspace = true
rand.workspace = true
rsa.workspace = true
rstaples.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio.workspace = true
ubitwarden = { path = "../ubitwarden-api" }
ubitwarden-agent = { path = "../ubitwarden-agent" }

[target.'cfg(target_os = "macos")'.dependencies]
localauthentication-rs.workspace = true

[lints]
workspace = true
