[package]
name = "ubw"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ubw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
dirs.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
rstaples.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tokio.workspace = true
ubitwarden = { path = "../ubitwarden" }
whoami.workspace = true

[lints]
workspace = true
