[package]
name = "ubw"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ubw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
daemonize.workspace = true
dialoguer.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
figlet-rs.workspace = true
libc.workspace = true
log.workspace = true
reqwest.workspace = true
rstaples.workspace = true
rust-embed.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
signature.workspace = true
ssh-agent-lib.workspace = true
tabled.workspace = true
tokio.workspace = true
ubitwarden = { path = "../ubitwarden-api" }
ubitwarden-agent = { path = "../ubitwarden-agent" }

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
x11rb.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[lints]
workspace = true
